added comments to css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,7 +21,7 @@ important:hover {
 
 
 }
-#final-thought {using IDs as selectors are not best practice
+#final-thought {/*using IDs as selectors is not best practice*/
   color: orange;
 }
 
